--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+  font-size: large;
+}
+
+ul {
+  text-align: left;
+  padding: 10px;
+}
+
+li{
+  margin-left: 10px;
+  display: inline;
+  padding: 10px;
+}
+
+li:hover{
+  background-color: rgb(159, 108, 21);
+  padding:  10spx;
+}
+.nav a{
+  text-decoration: none;
+}
+.nav nav{
+  display: flex;
+  background-color: #272727e3;
+  height: 50px;
+  justify-content: space-around;
+  align-items: center;
+}
+.switch-mode{
+  margin-right: 50px;
+}
+
+/* Players */
+.container{  
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.column{
+  width: 33%;
+}
+.card{
+  margin: 5px 0px;
+  background-color: rgb(206, 202, 202);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img{
+  width: 100%;
+}
+.title{ 
+  color: rgb(123, 123, 124);
+  padding: 5px;
+}
+.card a {
+  text-decoration: none;
+  color: rgb(197, 190, 190);
+  display: block;
+}
+button {
+  padding: 5px;
+  color: aliceblue;
+  background-color: black;
+  min-width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* footer */
+footer{
+  color: aliceblue;
+  background-color: rgb(172, 128, 15);
+  padding: 8px;
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* player pop-up */
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.popup {
+  margin: 70px auto;
+  padding: 5px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+.popup img{ width: 100%;}
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+  font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {color: #06D85F;}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
 }
